--- a/Jensen-Lit-Review.tex
+++ b/Jensen-Lit-Review.tex
@@ -55,7 +55,7 @@
 \setDedicationFile{./src/dedicationFile}%                 Dedication Page
 \setAcknowledgementsFile{./src/acknowledgementsFile}%     Acknowledgements Page
 \setAbstractFile{./src/abstractFile}%                     Abstract Page (This should only include the abstract itself)
-\setReferenceFile{./src/referenceFile}{amsplain}%         References. First argument is your bibtex source file
+\setReferenceFile{./src/myBib.bib}{amsplain}%         References. First argument is your bibtex source file
 %                                                       the second argument is your bibtex style file.
 \setBiographicalFile{./src/biographyFile}%                Biography file of the Author (you).
 
