--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -98,13 +98,15 @@
 }
 
 @article{AutomaticTrackingHealthy2021,
+  ids = {burtonAutomaticTrackingHealthy2021},
   title = {Automatic Tracking of Healthy Joint Kinematics from Stereo-Radiography Sequences.},
   year = {2021},
   journal = {Computers in Biology and Medicine},
   doi = {10.1016/j.compbiomed.2021.104945},
   abstract = {Kinematic tracking of healthy joints in radiography sequences is frequently performed by maximizing similarities between computed perspective projections of 3D computer models and corresponding objects' appearances in radiographic images. Significant human effort associated with manual tracking presents a major bottleneck in biomechanics research methods and limits the scale of target applications. The current work introduces a method for fully-automatic tracking of tibiofemoral and patellofemoral kinematics in stereo-radiography sequences for subjects performing dynamic activities. The proposed method involves the application of convolutional neural networks for annotating radiographs and a multi-stage optimization pipeline for estimating bone pose based on information provided by neural net predictions. Predicted kinematics are evaluated by comparing against manually-tracked trends across 20 distinct trials. Median absolute differences below 1.5millimeters or degrees for 6 tibiofemoral and 3 patellofemoral degrees of freedom demonstrate the utility of our approach, which improves upon previous semi-automatic methods by enabling end-to-end automation. Implementation of a fully-automatic pipeline for kinematic tracking will benefit evaluation of human movement by enabling large-scale studies of healthy knee kinematics.},
   pmid = {34678483},
-  annotation = {MAG ID: 3206636315}
+  annotation = {MAG ID: 3206636315},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\KLSW4ABE\\Burton et al. - 2021 - Automatic tracking of healthy joint kinematics fro.pdf}
 }
 
 @article{bakaStatisticalShapeModelBased2012,
@@ -461,21 +463,6 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\7NDWBZM2\\Ii - Applied Deep Learning in Orthopaedics.pdf}
 }
 
-@article{burtonAutomaticTrackingHealthy2021,
-  title = {Automatic Tracking of Healthy Joint Kinematics from Stereo-Radiography Sequences},
-  author = {Burton, William S. and Myers, Casey A. and Jensen, Andrew and Hamilton, Landon and Shelburne, Kevin B. and Banks, Scott A. and Rullkoetter, Paul J.},
-  year = {2021},
-  month = dec,
-  journal = {Computers in Biology and Medicine},
-  volume = {139},
-  pages = {104945},
-  issn = {00104825},
-  doi = {10.1016/j.compbiomed.2021.104945},
-  abstract = {Kinematic tracking of healthy joints in radiography sequences is frequently performed by maximizing similarities between computed perspective projections of 3D computer models and corresponding objects' appearances in radiographic images. Significant human effort associated with manual tracking presents a major bottleneck in biomechanics research methods and limits the scale of target applications. The current work introduces a method for fully-automatic tracking of tibiofemoral and patellofemoral kinematics in stereo-radiography sequences for subjects performing dynamic activities. The proposed method involves the application of convolutional neural networks for annotating radiographs and a multi-stage optimization pipeline for estimating bone pose based on information provided by neural net predictions. Predicted kinematics are evaluated by comparing against manually-tracked trends across 20 distinct trials. Median absolute differences below 1.5 millimeters or degrees for 6 tibiofemoral and 3 patellofemoral degrees of freedom demonstrate the utility of our approach, which improves upon previous semi-automatic methods by enabling end-to-end automation. Implementation of a fullyautomatic pipeline for kinematic tracking will benefit evaluation of human movement by enabling large-scale studies of healthy knee kinematics.},
-  langid = {english},
-  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\KLSW4ABE\\Burton et al. - 2021 - Automatic tracking of healthy joint kinematics fro.pdf}
-}
-
 @article{buslaevAlbumentationsFastFlexible2020,
   title = {Albumentations: {{Fast}} and {{Flexible Image Augmentations}}},
   shorttitle = {Albumentations},
@@ -594,7 +581,8 @@
   doi = {10.5244/c.2.23},
   abstract = {The problem we are addressing in Alvey Project MMI149 is that of using computer vision to understand the unconstrained 3D world, in which the viewed scenes will in general contain too wide a diversity of objects for topdown recognition techniques to work. For example, we desire to obtain an understanding of natural scenes, containing roads, buildings, trees, bushes, etc., as typified by the two frames from a sequence illustrated in Figure 1. The solution to this problem that we are pursuing is to use a computer vision system based upon motion analysis of a monocular image sequence from a mobile camera. By extraction and tracking of image features, representations of the 3D analogues of these features can be constructed.},
   keywords = {📥,Computer Vision,Contour,Corner Detection,Edge Detection,Image Processing},
-  annotation = {MAG ID: 2111308925}
+  annotation = {MAG ID: 2111308925},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\4GA3IHJH\\Chris Harris_Mike Stephens_1988_A COMBINED CORNER AND EDGE DETECTOR.pdf}
 }
 
 @inproceedings{cohenEMNISTExtendingMNIST2017,
@@ -638,7 +626,8 @@
   doi = {10.1007/s00167-008-0699-3},
   abstract = {Interest in the kinematics of reconstructed knees has increased since it was shown that the alteration of knee motion could lead to abnormal wear and damage to soft tissues. We performed intraoperative kinematic measurements using a navigation system to study knee kinematics before and after posterior substituting rotating platform total knee arthroplasty (TKA). We verified intraoperatively (1) if varus/valgus (VV) laxity and anterior/posterior (AP) laxity were restored after TKA; (2) if TKA induced abnormal femoral rollback; and (3) how tibial axial rotation was influenced by TKA throughout the range of flexion. We found that TKA improved alignment in preoperative osteoarthritic varus knees which became neutral after surgery and maintained a neutral alignment in neutral knees. The VV stability at 0\textdegree{} was restored while AP laxity at 90\textdegree{} significantly increased after TKA. Following TKA, the femur had an abnormal anterior translation up to 60\textdegree{} of flexion, followed by a small rollback of 12 {$\pm$} 5 mm. TKA influenced the tibia rotation pattern during flexion, but not the total amount of internal/external rotation throughout whole range of flexion, which was preserved after TKA (6\textdegree{} {$\pm$} 5\textdegree ). This study showed that the protocol proposed might be useful to adjust knee stability at time zero and that knee kinematic outcome during total knee replacement can be monitored by a navigation system.},
   pmid = {19099289},
-  annotation = {MAG ID: 2004758671}
+  annotation = {MAG ID: 2004758671},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\BS6AQ5BS\\D. Casino et al_2009_Intraoperative evaluation of total knee replacement.pdf}
 }
 
 @article{d.marrComputationalTheoryHuman1979,
@@ -650,7 +639,8 @@
   abstract = {An algorithm is proposed for solving the stereoscopic matching problem. The algorithm consists of five steps: (1) Each image is filtered at different orientations with bar masks of four sizes that increase with eccentricity; the equivalent filters are one or two octaves wide. (2) Zero-crossings in the filtered images, which roughly correspond to edges, are localized. Positions of the ends of lines and edges are also found. (3) For each mask orientation and size, matching takes place between pairs of zero-crossings or terminations of the same sign in the two images, for a range of disparities up to about the width of the mask's central region. (4) Wide masks can control vergence movements, thus causing small masks to come into correspondence. (5) When a correspondence is achieved, it is stored in a dynamic buffer, called the 2\$\textbackslash frac\{1\}\{2\}\$-D sketch. It is shown that this proposal provides a theoretical framework for most existing psychophysical and neurophysiological data about stereopsis. Several critical experimental predictions are also made, for instance about the size of Panum's area under various conditions. The results of such experiments would tell us whether, for example, co-operativity is necessary for the matching process.},
   pmid = {37518},
   keywords = {📥,Biplane Imaging,Computer Vision,Stereo},
-  annotation = {MAG ID: 1995756857}
+  annotation = {MAG ID: 1995756857},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\VG273PJG\\D. Marr_Tomaso Poggio_1979_A Computational Theory of Human Stereo Vision.pdf}
 }
 
 @article{d.marrEarlyProcessingVisual1976,
@@ -672,7 +662,8 @@
   abstract = {A theory of edge detection is presented. The analysis proceeds in two parts. (1) Intensity changes, which occur in a natural image over a wide range of scales, are detected separately at different scales. An appropriate filter for this purpose at a given scale is found to be the second derivative of a Gaussian, and it is shown that, provided some simple conditions are satisfied, these primary filters need not be orientation-dependent. Thus, intensity changes at a given scale are best detected by finding the zero values of {$\nabla$} 2  G(x, y) *  I(x, y)  for image I, where  G(x, y)  is a two-dimensional Gaussian distribution and {$\nabla$} 2  is the Laplacian. The intensity changes thus discovered in each of the channels are then represented by oriented primitives called zero-crossing segments, and evidence is given that this representation is complete. (2) Intensity changes in images arise from surface discontinuities or from reflectance or illumination boundaries, and these all have the property that they are spatially localized. Because of this, the zero-crossing segments from the different channels are not independent, and rules are deduced for combining them into a description of the image. This description is called the raw primal sketch. The theory explains several basic psychophysical findings, and the operation of forming oriented zero-crossing segments from the output of centre-surround {$\nabla$} 2  G  filters acting on the image forms the basis for a physiological model of simple cells (see Marr \& Ullman 1979).},
   pmid = {6102765},
   keywords = {📥},
-  annotation = {MAG ID: 2003370853}
+  annotation = {MAG ID: 2003370853},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\8HX98YCT\\D. Marr_Ellen C. Hildreth_1980_Theory of Edge Detection.pdf}
 }
 
 @article{davidg.loweFittingParameterizedThreedimensional1991,
@@ -683,7 +674,8 @@
   doi = {10.1109/34.134043},
   abstract = {Model-based recognition and motion tracking depend upon the ability to solve for projection and model parameters that will best fit a 3-D model to matching 2-D image features. The author extends current methods of parameter solving to handle objects with arbitrary curved surfaces and with any number of internal parameters representing articulation, variable dimensions, or surface deformations. Numerical stabilization methods are developed that take account of inherent inaccuracies in the image measurements and allow useful solutions to be determined even when there are fewer matches than unknown parameters. The Levenberg-Marquardt method is used to always ensure convergence of the solution. These techniques allow model-based vision to be used for a much wider class of problems than was possible with previous methods. Their application is demonstrated for tracking the motion of curved, parameterized objects. {$>$}},
   keywords = {📥},
-  annotation = {MAG ID: 2096600681}
+  annotation = {MAG ID: 2096600681},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\6NBWAAB9\\David G. Lowe_1991_Fitting parameterized three-dimensional models to images.pdf}
 }
 
 @article{davidj.kriegmanRecognizingPositioningCurved1990,
@@ -694,7 +686,8 @@
   doi = {10.1109/34.62602},
   abstract = {An approach for explicitly relating the shape of image contours to models of curved three-dimensional objects is presented. This relationship is used for object recognition and positioning. Object models consist of collections of parametric surface patches and their intersection curves; this includes nearly all representations used in computer-aided geometric design and computer vision. The image contours considered are the projections of surface discontinuities and occluding contours. Elimination theory provides a method for constructing the implicit equation of these contours for an object observed under orthographic or perspective projection. This equation is parameterized by the object's position and orientation with respect to the observer. Determining these parameters is reduced to a fitting problem between the theoretical contour and the observed data points. The proposed approach readily extends to parameterized models. It has been implemented for a simple world composed of various surfaces of revolution and tested on several real images. {$>$}},
   keywords = {📥},
-  annotation = {MAG ID: 2134864374}
+  annotation = {MAG ID: 2134864374},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\H6GSECST\\David J. Kriegman et al_1990_On recognizing and positioning curved 3-D objects from image contours.pdf}
 }
 
 @article{deaslaDOFINVIVOKINEMATICS,
@@ -1063,7 +1056,8 @@
   abstract = {Abstract   The Standardization and Terminology Committee (STC) of the International Society of Biomechanics (ISB) proposes a general reporting standard for joint kinematics based on the Joint Coordinate System (JCS), first proposed by Grood and Suntay for the knee joint in 1983 (J. Biomech. Eng. 105 (1983) 136). There is currently a lack of standard for reporting joint motion in the field of biomechanics for human movement, and the JCS as proposed by Grood and Suntay has the advantage of reporting joint motions in clinically relevant terms.  In this communication, the STC proposes definitions of JCS for the ankle, hip, and spine. Definitions for other joints (such as shoulder, elbow, hand and wrist, temporomandibular joint (TMJ), and whole body) will be reported in later parts of the series. The STC is publishing these recommendations so as to encourage their use, to stimulate feedback and discussion, and to facilitate further revisions.  For each joint, a standard for the local axis system in each articulating bone is generated. These axes then standardize the JCS. Adopting these standards will lead to better communication among researchers and clinicians.},
   pmid = {11934426},
   keywords = {📥},
-  annotation = {MAG ID: 1996117239}
+  annotation = {MAG ID: 1996117239},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\5J3K36YT\\Ge Wu et al_2002_ISB recommendation on definitions of joint coordinate system of various joints.pdf}
 }
 
 @article{gewuISBRecommendationsStandardization1995,
@@ -1119,7 +1113,8 @@
   doi = {10.1109/tpami.2020.3005434},
   abstract = {Point cloud learning has lately attracted increasing attention due to its wide applications in many areas, such as computer vision, autonomous driving, and robotics. As a dominating technique in AI, deep learning has been successfully used to solve various 2D vision problems. However, deep learning on point clouds is still in its infancy due to the unique challenges faced by the processing of point clouds with deep neural networks. Recently, deep learning on point clouds has become even thriving, with numerous methods being proposed to address different problems in this area. To stimulate future research, this paper presents a comprehensive review of recent progress in deep learning methods for point clouds. It covers three major tasks, including 3D shape classification, 3D object detection and tracking, and 3D point cloud segmentation. It also presents comparative results on several publicly available datasets, together with insightful observations and inspiring future research directions.},
   pmid = {32750799},
-  annotation = {MAG ID: 3039448353}
+  annotation = {MAG ID: 3039448353},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\YU6S6CEN\\Guo et al_2020_Deep Learning for 3D Point Clouds.pdf}
 }
 
 @article{hansonVivoAnteriorTibial2007,
@@ -1377,7 +1372,8 @@
   doi = {10.1109/tpami.2020.2983686},
   abstract = {High-resolution representations are essential for position-sensitive vision problems, such as human pose estimation, semantic segmentation, and object detection. Existing state-of-the-art frameworks first encode the input image as a low-resolution representation through a subnetwork that is formed by connecting high-to-low resolution convolutions in series (e.g., ResNet, VGGNet), and then recover the high-resolution representation from the encoded low-resolution representation. Instead, our proposed network, named as High-Resolution Network (HRNet), maintains high-resolution representations through the whole process. There are two key characteristics: (i) Connect the high-to-low resolution convolution streams in parallel; (ii) Repeatedly exchange the information across resolutions. The benefit is that the resulting representation is semantically richer and spatially more precise. We show the superiority of the proposed HRNet in a wide range of applications, including human pose estimation, semantic segmentation, and object detection, suggesting that the HRNet is a stronger backbone for computer vision problems. All the codes are available at https://github.com/HRNet.},
   pmid = {32248092},
-  annotation = {MAG ID: 3014641072}
+  annotation = {MAG ID: 3014641072},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\KETIKV36\\Jingdong Wang et al_2020_Deep High-Resolution Representation Learning for Visual Recognition.pdf}
 }
 
 @article{johncannyComputationalApproachEdge1986,
@@ -1389,7 +1385,8 @@
   abstract = {This paper describes a computational approach to edge detection. The success of the approach depends on the definition of a comprehensive set of goals for the computation of edge points. These goals must be precise enough to delimit the desired behavior of the detector while making minimal assumptions about the form of the solution. We define detection and localization criteria for a class of edges, and present mathematical forms for these criteria as functionals on the operator impulse response. A third criterion is then added to ensure that the detector has only one response to a single edge. We use the criteria in numerical optimization to derive detectors for several common image features, including step edges. On specializing the analysis to step edges, we find that there is a natural uncertainty principle between detection and localization performance, which are the two main goals. With this principle we derive a single operator shape which is optimal at any scale. The optimal detector has a simple approximate implementation in which edges are marked at maxima in gradient magnitude of a Gaussian-smoothed image. We extend this simple detector using operators of several widths to cope with different signal-to-noise ratios in the image. We present a general method, called feature synthesis, for the fine-to-coarse integration of information from operators at different scales. Finally we show that step edge detector performance improves considerably as the operator point spread function is extended along the edge.},
   pmid = {21869365},
   keywords = {📥,Convolution,Edge Detection,Kernel,Linear Shift Invariant},
-  annotation = {MAG ID: 2145023731}
+  annotation = {MAG ID: 2145023731},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\FBXYWGUB\\John Canny_1986_A Computational Approach to Edge Detection.pdf}
 }
 
 @article{johncannyFindingEdgesLines1983,
@@ -1416,7 +1413,7 @@
   doi = {10.1007/BF00941892},
   abstract = {We present a new algorithm for finding the global minimum of a multivariate function subject to simple bounds. The algorithm is a modification of the standard Lipschitzian approach that eliminates the need to specify a Lipschitz constant. This is done by carrying out simultaneous searches using all possible constants from zero to infinity. On nine standard test functions, the new algorithm converges in fewer function evaluations than most competing methods. The motivation for the new algorithm stems from a different way of looking at the Lipschitz constant. In particular, the Lipschitz constant is viewed as a weighting parameter that indicates how much emphasis to place on global versus local search. In standard Lipschitzian methods, this constant is usually large because it must equal or exceed the maximum rate of change of the objective function. As a result, these methods place a high emphasis on global search and exhibit slow convergence. In contrast, the new algorithm carries out simultaneous searches using all possible constants, and therefore operates at both the global and local level. Once the global part of the algorithm finds the basin of convergence of the optimum, the local part of the algorithm quickly and automatically exploits it. This accounts for the fast convergence of the new algorithm on the test functions.},
   langid = {english},
-  keywords = {📥},
+  keywords = {📥,DIRECT-JTA,Dividing Rectangles,Global Minimum,Global Optimization,Lipschitz Constant,Lipschitzian Optimization,Optimization},
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\FUZZH4HI\\Donald R. Jones et al_1993_Lipschitzian optimization without the Lipschitz constant.pdf;C\:\\Users\\ajensen123\\Zotero\\storage\\GK56P672\\Jones et al. - 1993 - Lipschitzian optimization without the Lipschitz co.pdf;C\:\\Users\\ajensen123\\Zotero\\storage\\WDIY3RKG\\Jones et al. - 1993 - Lipschitzian optimization without the Lipschitz co.pdf}
 }
 
@@ -2036,7 +2033,8 @@
   doi = {10.1002/jor.1100120314},
   abstract = {The purpose of this study was to monitor selected aspects of the three-dimensional kinematics of the knee during walking with regular shoes and with modified shoes that induced either pronation or supination of the foot. Steinmann traction pins were inserted into the right tibia and femur of five adult men who had apparently normal lower extremities. Target clusters mounted onto the pins were filmed by four cine cameras operating at 100 frames/sec. Two trials per subject were analyzed for each of the three experimental conditions: regular running shoes, running shoes with a 10\textdegree{} valgus wedge, and running shoes with a 10\textdegree{} varus wedge. The different types of footwear induced only minor kinematic changes at the knee during the stance phase of walking. The angular patterns of the tibiofemoral joint were modified by less than 1\textdegree, whereas the translatory patterns were altered by 2 mm. Immediately following foot-strike, the valgus-wedge shoes caused the tibia to rotate internally 4\textdegree{} more than the varus-wedge shoes, but at the tibiofemoral joint no consistent differences in the pattern of internal-external rotation between normal and modified footwear were measurable. These findings suggest that, in the healthy lower extremity, increased internal and external tibial rotation is resolved at the hip joint, with changes at the tibiofemoral joint that barely are detectable with the techniques used in this study.},
   pmid = {8207595},
-  annotation = {MAG ID: 2054287737}
+  annotation = {MAG ID: 2054287737},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\AJCNS8BR\\Mario A. Lafortune et al_1994_Foot inversion-eversion and knee kinematics during walking.pdf}
 }
 
 @article{markeljReview3D2D2012,
@@ -2521,7 +2519,8 @@
   doi = {10.1109/cvpr.1993.341037},
   abstract = {Recovering the shape of an object from triangulation fails at occluding contours of smooth objects because the contour generators are view dependent. For three or more views, shape recovery is possible, and several algorithms have been developed for this purpose. The authors' approach uses a linear smoother to optimally combine all of the measurements available at the contours (and other edges) in all of the images. This allows extraction of a robust and dense estimate of surface shape, and shape information from both surface markings and occluding contours. {$>$}},
   keywords = {📥},
-  annotation = {MAG ID: 1484522078}
+  annotation = {MAG ID: 1484522078},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\NRG3QSL5\\Richard Szeliski_Richard Weiss_1993_Robust shape recovery from occluding contours using a linear smoother.pdf}
 }
 
 @article{roberta.sistonIntraoperativePassiveKinematics2006,
@@ -2532,7 +2531,8 @@
   doi = {10.1002/jor.20163},
   abstract = {Totalkneearthroplastyisasuccessfulproceduretotreatpainandfunctionaldisability duetoosteoarthritis. However,preciselyhowatotalkneearthroplasty changesthekinematics of an osteoarthritic knee is unknown. We used a surgical navigation system to measure normal passive kinematics from 7 embalmed cadaver lower extremities and in vivo intraoperative passive kinematics on 17 patients undergoing primary total knee arthroplasty to address two questions: How do the kinematics of knees with advanced osteoarthritis differ from normal knees?; and, Does posterior substituting total knee arthroplasty restore kinematics towards normal? Osteoarthritic knees displayed a decreased screw-home motion and abnormal varus/valgus rotations between 108 and908of kneeflexionwhen compared tonormalknees. The anterior-posteriormotionof thefemur inosteoarthritickneeswasnotdifferentthaninnormalknees.Followingtotalkneearthroplasty,we found abnormal varus/valgus rotations in early flexion, a reduced screw-home motion when compared to the osteoarthritic knees, and an abnormal anterior translation of the femur during the first 608 of flexion. Posterior substituting total knee arthroplasty does not appear to restore normal passivevarus/valgusrotationsorthescrew motionandintroducesanabnormalanteriortranslation of the femur during intraoperative evaluation. 2006 Orthopaedic Research Society. Published by Wiley Periodicals, Inc. J Orthop Res 24:1607-1614, 2006},
   pmid = {16770795},
-  annotation = {MAG ID: 2136384908}
+  annotation = {MAG ID: 2136384908},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\LR6Z4QQ4\\Robert A. Siston et al_2006_Intraoperative passive kinematics of osteoarthritic knees before and after.pdf}
 }
 
 @article{ronnebergerUNetConvolutionalNetworks2015,
@@ -2541,7 +2541,8 @@
   year = {2015},
   doi = {10.1007/978-3-319-24574-4_28},
   abstract = {There is large consent that successful training of deep networks requires many thousand annotated training samples. In this paper, we present a network and training strategy that relies on the strong use of data augmentation to use the available annotated samples more efficiently. The architecture consists of a contracting path to capture context and a symmetric expanding path that enables precise localization. We show that such a network can be trained end-to-end from very few images and outperforms the prior best method (a sliding-window convolutional network) on the ISBI challenge for segmentation of neuronal structures in electron microscopic stacks. Using the same network trained on transmitted light microscopy images (phase contrast and DIC) we won the ISBI cell tracking challenge 2015 in these categories by a large margin. Moreover, the network is fast. Segmentation of a 512x512 image takes less than a second on a recent GPU. The full implementation (based on Caffe) and the trained networks are available at http://lmb.informatik.uni-freiburg.de/people/ronneber/u-net .},
-  annotation = {MAG ID: 1901129140}
+  annotation = {MAG ID: 1901129140},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\627TMYGN\\Ronneberger et al_2015_U-Net.pdf}
 }
 
 @article{russoChangesKneeMotion2006,
@@ -2648,7 +2649,8 @@
   doi = {10.1016/j.jbiomech.2011.02.078},
   abstract = {Abstract   Relatively high rates of loosening and implant failure have been reported after total ankle arthroplasty, especially in first and second generation implants. Abnormal kinematics and incongruency of the articular surface may cause increased loads applied to the implant with concomitant polyethylene wear, resulting in loosening and implant failure. The purpose of this study was to measure three-dimensional kinematics of two-component total ankle arthroplasty during non-weightbearing and weightbearing activities, and to investigate incongruency of the articular surfaces during these activities. Forty-seven patients with a mean age of 71 years were enrolled. Radiographs were taken at non-weightbearing maximal dorsiflexion and plantarflexion, and weightbearing maximal dorsiflexion, plantarflexion, and neutral position. 3D\textendash 2D model-image registration was performed using the radiographs and the three-dimensional implant models, and three-dimensional joint angles were determined. The implanted ankles showed 18.1{$\pm$}8.6\textdegree{} (mean{$\pm$}standard deviation) of plantarflexion, 0.1{$\pm$}0.7\textdegree{} of inversion, 1.2{$\pm$}2.0\textdegree{} of internal rotation, and 0.8{$\pm$}0.6mm of posterior translation of the talar component in the non-weightbearing activity, and 17.8{$\pm$}7.5\textdegree{} of plantarflexion, 0.4{$\pm$}0.5\textdegree{} of inversion, 1.8{$\pm$}2.0\textdegree{} of internal rotation, and 0.7{$\pm$}0.5mm of posterior translation in the weightbearing activity. There were no significant differences between the non-weightbearing and weightbearing kinematics except for the plantarflexion angle. Incongruency of the articular surface occurred in more than 75\% of the ankles. Our observations will provide useful data against which kinematics of other implant designs, such as three-component total ankle arthroplasty, can be compared.},
   pmid = {21392769},
-  annotation = {MAG ID: 2043397945}
+  annotation = {MAG ID: 2043397945},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\VVFHEN9P\\Satoshi Yamaguchi et al_2011_In vivo kinematics of two-component total ankle arthroplasty during.pdf}
 }
 
 @article{satoThreedimensionalLowerExtremity2004,
@@ -2883,6 +2885,22 @@
   langid = {english},
   keywords = {📥},
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\9KN46RJ3\\Stein et al. - 1993 - Motion of the patella during walking a video digi.pdf}
+}
+
+@article{sugiComparingVivoThreedimensional2021,
+  title = {Comparing in Vivo Three-Dimensional Shoulder Elevation Kinematics between Standing and Supine Postures},
+  author = {Sugi, Akira and Matsuki, Keisuke and Fukushi, Ryunosuke and Shimoto, Takeshi and Hirose, Toshiaki and Shibayama, Yuji and Nishinaka, Naoya and Iba, Kousuke and Yamashita, Toshihiko and Banks, Scott A.},
+  year = {2021},
+  month = nov,
+  journal = {JSES International},
+  volume = {5},
+  number = {6},
+  pages = {1001--1007},
+  issn = {26666383},
+  doi = {10.1016/j.jseint.2021.07.005},
+  abstract = {Background: It is often assumed that body posture, standing vs. supine, changes shoulder muscle activation and range of motion, but these altered shoulder mechanics have not been objectively assessed. We expected the supine posture might facilitate scapular rotation and change subacromial pressure. The purpose of this study is to evaluate the influence of body posture on shoulder kinematics during arm elevation. Methods: Ten males and eight females with a mean age of 33 years participated in this study. Shoulder kinematics were assessed during scapular plane elevation in the standing and supine postures by using single-plane fluoroscopic images. Kinematics were measured using 3-dimensional to 2-dimensional model-image registration techniques: matching the 3-dimensional bone model derived from computed tomography onto each fluoroscopic image. Glenohumeral superior/inferior translation, acromiohumeral distance, and scapular rotations were compared between the postures. The effect of sex also was evaluated. Results: With the arm at the side position, the humeral head in the supine posture was located 0.5 mm superior compared to the standing posture (P {$<$} .001). During humeral elevation, the humeral head significantly shifted more inferiorly in the supine posture than in standing; the biggest mean difference was 0.6 mm, P {$\frac{1}{4}$} .003. But acromiohumeral distance during elevation was not significantly affected by the body posture (P {$\frac{1}{4}$} .05). Scapular upward rotation and posterior tilt were significantly different between the postures (P {$<$} .001). Sex had statistically significant, but quantitatively small, effects on shoulder kinematics. Conclusions: Body postures affect shoulder kinematics during humeral elevation. This knowledge will be useful to optimize rehabilitation exercises and for diagnostic insight. \textcopyright{} 2021 The Authors. Published by Elsevier Inc. on behalf of American Shoulder and Elbow Surgeons. This is an open access article under the CC BY-NC-ND license (http://creativecommons.org/licenses/bync-nd/4.0/).},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\QC5KNIBQ\\Sugi et al. - 2021 - Comparing in vivo three-dimensional shoulder eleva.pdf}
 }
 
 @article{tahaMetricsEvaluating3D2015,
