--- a/src/abstractFile.tex
+++ b/src/abstractFile.tex
@@ -16,3 +16,9 @@ The primary function of synovial joints is to support the dynamic, loaded motion
 In the past, researchers have been able to create methods of determining the motion of joints. Despite their efforts, these methods still rely heavily on invasive techinques, inaccurate measurements, or time consuming computtations. Each of these make them impossible to introduce into a cliniical setting.
 
 Utilizing computatiuonal speed-ups associated with increased computer power, various machine learning techinques have come into play for different computer vision problems. This paper explores the different cases of making an autonomous system that can quantify the 6 DOF kinematics of various joints using only 2D fluoroscopic imaging systems.
+
+{\bf \color{blue} WORKING ABSTRACT FROM ANOTHER INTRO THAT I WROTE}
+
+The primary function of human synovial joints is to support the dynamic motion of the musculoskeletal system. The diseases that typically affect these systems manifest during movement, with mild to severe pain arising during specific activities or during particular ranges of motion. Unsurprisingly, the financial burden of musculoskeletal diseases is roughly USD 300 billion per year in direct and indirect costs \cite{BMUSBurdenMusculoskeletal}. One of the most common conditions affecting human joints is osteoarthritis, which involves the progressive loss of the cartilage between the joint surfaces over time \cite{sharmaOsteoarthritisCompanionRheumatology2007}. A highly effective solution for osteoarthritis is arthroplasty, which involves a partial or complete removal and resurfacing of the affected joint with polymeric and metallic components intended to relieve pain and restore a degree of natural function and motion. Despite being highly effective, roughly 20\% of patients receiving total knee arthroplasty express some form of dissatisfaction, usually manifested as pain, instability or stiffness during movement (\cite{bakerRolePainFunction2007}, \cite{scottPredictingDissatisfactionFollowing2010}, \cite{bournePatientSatisfactionTotal2010}). Surprisingly, standard clinical musculoskeletal diagnostic methods are entirely static. That is, clinicians do not have at their disposal clinically practical ways to quantify skeletal motion during weight-bearing or dynamic movement when most pain symptoms occur. Unfortunately, most of the tools used to accurately quantify 3D dynamic motion (e.g., 3D motion capture, radiostereometry, fluoroscopic model/image registration) are prohibitively expensive or impractical to use in clinical settings. Methods using single-plane fluoroscopic or flat-panel imaging with 3D-to-2D model-image registration have been used since the 1990s. They have been shown to provide sufficient accuracy for many clinical  joint assessment applications , including natural and replaced knees (\cite{banksAccurateMeasurementThreedimensional1996}, \cite{banksVivoKinematicsCruciateretaining1997}, \cite{mahfouzRobustMethodRegistration2003}, \cite{zuffiModelbasedMethodReconstruction1999}), natural and replaced shoulders (\cite{matsukiVivo3DAnalysis2014}, \cite{matsukiDynamicVivoGlenohumeral2012}, \cite{zhuAccuracyRepeatabilityAutomatic2012}, \cite{matsukiVivo3dimensionalAnalysis2011}, \cite{kijimaVivo3dimensionalAnalysis2015}), and extremities (\cite{yamaguchiAnkleSubtalarKinematics2009}, \cite{listThreeDimensionalKinematicsUnconstrained2012}, \cite{cenniKinematicsThreeComponents2012}, \cite{cenniFunctionalPerformanceTotal2013}, \cite{tersi3DElbowKinematics2009}). One benefit of this approach is that suitable images can be acquired with equipment commonly found in most hospitals. The main impediment for this technology to be used clinically is the time and expense of human operators to supervise the model-image registration process. If the need for human supervision for model-image registration were eliminated, then fluoroscopic imaging could provide a reliable, inexpensive, and accurate method to provide 3D dynamic joint kinematics in a clinical setting.
+State-of-the-art techniques for generating kinematics using model-image registration involve numerical optimization techniques that iteratively match bone or implant model projections in dynamic x-ray images (\cite{postolkaEvaluationIntensitybasedAlgorithm2020}, \cite{floodAutomatedRegistration3D2018}, \cite{tsaiVolumetricModelbased2D2010}). These methods provide accurate 3D bone or implant kinematics when given a rough initial pose estimate for numerical optimization (\cite{floodAutomatedRegistration3D2018}). However, these methods still require human input for an initial pose estimate, making them impractical for clinical use. 
+Recent advancements in computational capabilities and machine learning algorithms provide tools that are well-suited to replace human supervision for a range of time-consuming tasks including model-image registration. In particular, convolutional neural networks can be trained to provide the image segmentation and pose-estimation capabilities required to autonomously extract knee implant kinematics from single-plane video fluoroscopy. Neural networks can be trained to segment the pixels belonging to a particular knee implant (femoral or tibial), and this pixel information can be used in a numerical optimizer to generate an implant's 3D pose. Alternatively, a neural network can be used directly for pose-regression, using image data as input values and 3D object pose as output. This latter technique relies on the network's ability to extract latent characteristics that determine the pose, not an object-oriented cost function to minimize pose error. This regression approach will be sensitive to study conditions, including implant geometry, projection distance and image size, all of which are "lost" when viewing a single-plane image as only a collection of pixels. 
